Tạo Database SANPHAM

--- a/Cart/Cart/Cart.csproj
+++ b/Cart/Cart/Cart.csproj
@@ -106,6 +106,21 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="App_Data\SANPHAM.mdf" />
+    <Content Include="App_Data\SANPHAM_log.ldf">
+      <DependentUpon>SANPHAM.mdf</DependentUpon>
+    </Content>
+    <Content Include="bootstrap\css\bootstrap-grid.css" />
+    <Content Include="bootstrap\css\bootstrap-grid.min.css" />
+    <Content Include="bootstrap\css\bootstrap-reboot.css" />
+    <Content Include="bootstrap\css\bootstrap-reboot.min.css" />
+    <Content Include="bootstrap\css\bootstrap.css" />
+    <Content Include="bootstrap\css\bootstrap.min.css" />
+    <Content Include="bootstrap\jquery-3.6.0.min.js" />
+    <Content Include="bootstrap\js\bootstrap.bundle.js" />
+    <Content Include="bootstrap\js\bootstrap.bundle.min.js" />
+    <Content Include="bootstrap\js\bootstrap.js" />
+    <Content Include="bootstrap\js\bootstrap.min.js" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -125,7 +140,116 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="bootstrap\css\bootstrap-grid.css.map" />
+    <Content Include="bootstrap\css\bootstrap-grid.min.css.map" />
+    <Content Include="bootstrap\css\bootstrap-reboot.css.map" />
+    <Content Include="bootstrap\css\bootstrap-reboot.min.css.map" />
+    <Content Include="bootstrap\css\bootstrap.css.map" />
+    <Content Include="bootstrap\css\bootstrap.min.css.map" />
+    <Content Include="bootstrap\js\bootstrap.bundle.js.map" />
+    <Content Include="bootstrap\js\bootstrap.bundle.min.js.map" />
+    <Content Include="bootstrap\js\bootstrap.js.map" />
+    <Content Include="bootstrap\js\bootstrap.min.js.map" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Images\DienThoais\Galaxy-S22-Black-600x600.jpg" />
+    <Content Include="Images\DienThoais\Galaxy-S22-Plus-Black-600x600.jpg" />
+    <Content Include="Images\DienThoais\Galaxy-S22-Ultra-Burgundy-600x600.jpg" />
+    <Content Include="Images\DienThoais\iphone-12-mini-mau-tim-3-600x600.jpg" />
+    <Content Include="Images\DienThoais\iphone-12-pro-xam-new-600x600-2-600x600.jpg" />
+    <Content Include="Images\DienThoais\iphone-12-xanh-la-new-2-600x600.jpg" />
+    <Content Include="Images\DienThoais\iphone-13-midnight-2-600x600.jpg" />
+    <Content Include="Images\DienThoais\iphone-13-mini-128gb-xanh-la-090322-011146-600x600.jpg" />
+    <Content Include="Images\DienThoais\iphone-13-mini-blue-2-600x600.jpg" />
+    <Content Include="Images\DienThoais\iphone-13-pro-max-gold-1-600x600.jpg" />
+    <Content Include="Images\DienThoais\iphone-13-pro-max-xanh-la-090322-093249-600x600.jpg" />
+    <Content Include="Images\DienThoais\iphone-13-pro-sierra-blue-600x600.jpg" />
+    <Content Include="Images\DienThoais\iphone-13-pro-xanh-la-090322-093302-600x600.jpg" />
+    <Content Include="Images\DienThoais\iphone-se-2020-trang-600x600-600x600.jpg" />
+    <Content Include="Images\DienThoais\iphone-se-white-600x600.jpg" />
+    <Content Include="Images\DienThoais\iphone-xi-do-600x600.jpg" />
+    <Content Include="Images\DienThoais\iphone-xr-128gb-600x600.jpg" />
+    <Content Include="Images\DienThoais\oppo-reno4-pro-trang-600x600.jpg" />
+    <Content Include="Images\DienThoais\oppo-reno6-5g-black-600x600.jpg" />
+    <Content Include="Images\DienThoais\oppo-reno7-5g-xanh-thumb-600x600.jpg" />
+    <Content Include="Images\DienThoais\realme-c21y-blue-600x600.jpg" />
+    <Content Include="Images\DienThoais\samsung-galaxy-a52s-5g-mint-600x600.jpg" />
+    <Content Include="Images\DienThoais\Samsung-Galaxy-S21-FE-tim-600x600.jpg" />
+    <Content Include="Images\DienThoais\samsung-galaxy-s21-plus-bac-600x600-600x600.jpg" />
+    <Content Include="Images\DienThoais\samsung-galaxy-s21-tim-600x600.jpg" />
+    <Content Include="Images\DienThoais\samsung-galaxy-s21-ultra-bac-600x600-1-600x600.jpg" />
+    <Content Include="Images\DienThoais\samsung-galaxy-z-flip-3-cream-1-600x600.jpg" />
+    <Content Include="Images\DienThoais\samsung-galaxy-z-fold-3-silver-1-600x600.jpg" />
+    <Content Include="Images\DienThoais\Vivo-V23e-1-2-600x600.jpg" />
+    <Content Include="Images\DienThoais\xiaomi-11t-pro-5g-8gb-thumb-600x600.jpeg" />
+    <Content Include="Images\DienThoais\Xiaomi-11T-White-1-2-3-600x600.jpg" />
+    <Content Include="Images\DienThoais\Xiaomi-12-xam-thumb-mau-600x600.jpg" />
+    <Content Include="Images\LapTops\acer-nitro-5-gaming-an515-45-r6ev-r5-5600h.jpg" />
+    <Content Include="Images\LapTops\acer-nitro-5-gaming-an515-57-54mv-i5-11400h.jpg" />
+    <Content Include="Images\LapTops\apple-macbook-pro-14-m1-pro.jpg" />
+    <Content Include="Images\LapTops\apple-macbook-pro-m1-2020.jpg" />
+    <Content Include="Images\LapTops\asus-tuf-gaming-fx506lh.jpg" />
+    <Content Include="Images\LapTops\asus-zenbook-ux425ea-i5-1135g7-8gb-512gb-600x600.jpg" />
+    <Content Include="Images\LapTops\dell-gaming-alienware-m15-r6-i7-11800h-32gb-1tb-ssd-8gb-600x600.jpg" />
+    <Content Include="Images\LapTops\dell-gaming-g15-5511-i7-p105f006bgr-140222-091855-600x600.jpg" />
+    <Content Include="Images\LapTops\dell-gaming-g15-5515-r7-5800h-16gb-512gb-4gb-rtx3050ti-600x600.jpg" />
+    <Content Include="Images\LapTops\dell-inspiron-15-3511-i3-1115g4.jpg" />
+    <Content Include="Images\LapTops\dell-xps-17-9710-i7-xps7i7001w1-1-600x600.jpg" />
+    <Content Include="Images\LapTops\gigabyte-gaming-g5-i5-10500h-16gb-512gb-6gb-171121-034937-600x600.jpg" />
+    <Content Include="Images\LapTops\hp-240-g8-i3-1005g1-4gb-256gb-win10-519a7pa.jpg" />
+    <Content Include="Images\LapTops\hp-envy-x360-convert-13-ay1056au-r7-601q8pa-170322-023537-600x600.jpg" />
+    <Content Include="Images\LapTops\hp-gaming-victus-16-d0198tx-i7-4r0u0pa-600x600.jpg" />
+    <Content Include="Images\LapTops\hp-zbook-firefly-14-g8-i7-275w0av-251121-045610-600x600.jpg" />
+    <Content Include="Images\LapTops\intel-nuc-m15-i5-bbc510eauxbc1.jpg" />
+    <Content Include="Images\LapTops\intel-nuc-m15-i7.jpg" />
+    <Content Include="Images\LapTops\lenovo-gaming-legion-5-15ith6-i7.jpg" />
+    <Content Include="Images\LapTops\lenovo-ideapad-3-15iml05-i3-10110u.jpg" />
+    <Content Include="Images\LapTops\lenovo-yoga-9-14itl5-i7-82bg006evn-21-600x600.jpg" />
+    <Content Include="Images\LapTops\lenovo-yoga-duet-7-13itl6-i5-82ma000pvn.jpg" />
+    <Content Include="Images\LapTops\lenovo-yoga-slim-7-14itl05-i7-1165g7.jpg" />
+    <Content Include="Images\LapTops\lg-gram-16-i7-16z90pgah73a5-600x600.jpg" />
+    <Content Include="Images\LapTops\macbook-air-m1-2020-gray-600x600.jpg" />
+    <Content Include="Images\LapTops\macbook-air-m1-2020.jpg" />
+    <Content Include="Images\LapTops\macbook-pro-m1-2020-gray.jpg" />
+    <Content Include="Images\LapTops\macbook-pro-m1-2020-silver.jpg" />
+    <Content Include="Images\LapTops\msi-creator-z16p-b12ugst-i7-12700h-32gb-2tb-ssd-8gb-rtx3070ti-max-q-600x600.jpg" />
+    <Content Include="Images\LapTops\msi-gaming-ge66-raider-11uh-i7-259vn-600x600.jpg" />
+    <Content Include="Images\LapTops\msi-gaming-gf63-thin-11uc-i5-11400h.jpg" />
+    <Content Include="Images\LapTops\msi-gaming-gs66-stealth-11ug-i7-219vn-600x600.jpg" />
+    <Content Include="Images\LapTops\msi-gaming-pulse-gl66-11udk-i7-816vn-051121-023122-600x600.jpg" />
+    <Content Include="Images\LapTops\msi-gaming-stealth-15m-a11uek-i7-254vn-600x600.jpg" />
+    <Content Include="Images\LapTops\Surface-Laptop-Studio-600x600.jpg" />
+    <Content Include="Images\LapTops\Surface-Pro-8-Platinum-600x600.jpg" />
+    <Content Include="Images\LapTops\thinkbook-14p-g2-ach-r5-.jpg" />
+    <Content Include="Images\TiVi\tv1.jpeg" />
+    <Content Include="Images\TiVi\tv10.jpg" />
+    <Content Include="Images\TiVi\tv11.jpg" />
+    <Content Include="Images\TiVi\tv12.jpg" />
+    <Content Include="Images\TiVi\tv13.jpg" />
+    <Content Include="Images\TiVi\tv14.jpg" />
+    <Content Include="Images\TiVi\tv15.jpg" />
+    <Content Include="Images\TiVi\tv16.jpg" />
+    <Content Include="Images\TiVi\tv17.jpg" />
+    <Content Include="Images\TiVi\tv18.jpg" />
+    <Content Include="Images\TiVi\tv19.jpg" />
+    <Content Include="Images\TiVi\tv2.jpg" />
+    <Content Include="Images\TiVi\tv20.jpg" />
+    <Content Include="Images\TiVi\tv21.jpg" />
+    <Content Include="Images\TiVi\tv22.jpg" />
+    <Content Include="Images\TiVi\tv23.jpg" />
+    <Content Include="Images\TiVi\tv24.jpg" />
+    <Content Include="Images\TiVi\tv25.jpg" />
+    <Content Include="Images\TiVi\tv26.jpg" />
+    <Content Include="Images\TiVi\tv27.jpg" />
+    <Content Include="Images\TiVi\tv28.jpg" />
+    <Content Include="Images\TiVi\tv29.jpg" />
+    <Content Include="Images\TiVi\tv3.jpg" />
+    <Content Include="Images\TiVi\tv30.jpg" />
+    <Content Include="Images\TiVi\tv4.png" />
+    <Content Include="Images\TiVi\tv5.jpg" />
+    <Content Include="Images\TiVi\tv6.jpg" />
+    <Content Include="Images\TiVi\tv7.jpg" />
+    <Content Include="Images\TiVi\tv8.jpg" />
+    <Content Include="Images\TiVi\tv9.jpg" />
     <Content Include="Login.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -156,6 +280,8 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
+    <Content Include="ThongTinChiTiet.aspx" />
+    <Content Include="TongQuan.aspx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -217,6 +343,20 @@
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
     </Compile>
+    <Compile Include="ThongTinChiTiet.aspx.cs">
+      <DependentUpon>ThongTinChiTiet.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ThongTinChiTiet.aspx.designer.cs">
+      <DependentUpon>ThongTinChiTiet.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="TongQuan.aspx.cs">
+      <DependentUpon>TongQuan.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TongQuan.aspx.designer.cs">
+      <DependentUpon>TongQuan.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -225,9 +365,7 @@
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
