Update Login form

--- a/Cart/Cart/Cart.csproj
+++ b/Cart/Cart/Cart.csproj
@@ -114,48 +114,6 @@
     <Content Include="App_Data\Register_log.ldf">
       <DependentUpon>Register.mdf</DependentUpon>
     </Content>
-    <Content Include="Assets\css\main.css" />
-    <Content Include="Assets\css\util.css" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\css\font-awesome.css" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\css\font-awesome.min.css" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\fonts\fontawesome-webfont.svg" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\HELP-US-OUT.txt" />
-    <Content Include="Assets\fonts\Linearicons-Free-v1.0.0\icon-font.min.css" />
-    <Content Include="Assets\fonts\Linearicons-Free-v1.0.0\WebFont\Linearicons-Free.svg" />
-    <Content Include="Assets\fonts\montserrat\OFL.txt" />
-    <Content Include="Assets\images\bg-01.jpg" />
-    <Content Include="Assets\images\icons\favicon.ico" />
-    <Content Include="Assets\js\main.js" />
-    <Content Include="Assets\vendor\animate\animate.css" />
-    <Content Include="Assets\vendor\animsition\css\animsition.css" />
-    <Content Include="Assets\vendor\animsition\css\animsition.min.css" />
-    <Content Include="Assets\vendor\animsition\js\animsition.js" />
-    <Content Include="Assets\vendor\animsition\js\animsition.min.js" />
-    <Content Include="Assets\vendor\bootstrap\css\bootstrap-grid.css" />
-    <Content Include="Assets\vendor\bootstrap\css\bootstrap-grid.min.css" />
-    <Content Include="Assets\vendor\bootstrap\css\bootstrap-reboot.css" />
-    <Content Include="Assets\vendor\bootstrap\css\bootstrap-reboot.min.css" />
-    <Content Include="Assets\vendor\bootstrap\css\bootstrap.css" />
-    <Content Include="Assets\vendor\bootstrap\css\bootstrap.min.css" />
-    <Content Include="Assets\vendor\bootstrap\js\bootstrap.js" />
-    <Content Include="Assets\vendor\bootstrap\js\bootstrap.min.js" />
-    <Content Include="Assets\vendor\bootstrap\js\popper.js" />
-    <Content Include="Assets\vendor\bootstrap\js\popper.min.js" />
-    <Content Include="Assets\vendor\bootstrap\js\tooltip.js" />
-    <Content Include="Assets\vendor\countdowntime\countdowntime.js" />
-    <Content Include="Assets\vendor\css-hamburgers\hamburgers.css" />
-    <Content Include="Assets\vendor\css-hamburgers\hamburgers.min.css" />
-    <Content Include="Assets\vendor\daterangepicker\daterangepicker.css" />
-    <Content Include="Assets\vendor\daterangepicker\daterangepicker.js" />
-    <Content Include="Assets\vendor\daterangepicker\moment.js" />
-    <Content Include="Assets\vendor\daterangepicker\moment.min.js" />
-    <Content Include="Assets\vendor\jquery\jquery-3.2.1.min.js" />
-    <Content Include="Assets\vendor\perfect-scrollbar\perfect-scrollbar.css" />
-    <Content Include="Assets\vendor\perfect-scrollbar\perfect-scrollbar.min.js" />
-    <Content Include="Assets\vendor\select2\select2.css" />
-    <Content Include="Assets\vendor\select2\select2.js" />
-    <Content Include="Assets\vendor\select2\select2.min.css" />
-    <Content Include="Assets\vendor\select2\select2.min.js" />
     <Content Include="bootstrap\css\bootstrap-grid.css" />
     <Content Include="bootstrap\css\bootstrap-grid.min.css" />
     <Content Include="bootstrap\css\bootstrap-reboot.css" />
@@ -173,6 +131,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="CSS\Styles.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -196,85 +155,6 @@
     <Content Include="bootstrap\js\bootstrap.bundle.min.js.map" />
     <Content Include="bootstrap\js\bootstrap.js.map" />
     <Content Include="bootstrap\js\bootstrap.min.js.map" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\fonts\fontawesome-webfont.eot" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\fonts\fontawesome-webfont.ttf" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\fonts\fontawesome-webfont.woff" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\fonts\fontawesome-webfont.woff2" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\fonts\FontAwesome.otf" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\less\animated.less" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\less\bordered-pulled.less" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\less\core.less" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\less\fixed-width.less" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\less\font-awesome.less" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\less\icons.less" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\less\larger.less" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\less\list.less" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\less\mixins.less" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\less\path.less" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\less\rotated-flipped.less" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\less\screen-reader.less" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\less\stacked.less" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\less\variables.less" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\scss\font-awesome.scss" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\scss\_animated.scss" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\scss\_bordered-pulled.scss" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\scss\_core.scss" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\scss\_fixed-width.scss" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\scss\_icons.scss" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\scss\_larger.scss" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\scss\_list.scss" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\scss\_mixins.scss" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\scss\_path.scss" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\scss\_rotated-flipped.scss" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\scss\_screen-reader.scss" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\scss\_stacked.scss" />
-    <Content Include="Assets\fonts\font-awesome-4.7.0\scss\_variables.scss" />
-    <Content Include="Assets\fonts\Linearicons-Free-v1.0.0\WebFont\Linearicons-Free.eot" />
-    <Content Include="Assets\fonts\Linearicons-Free-v1.0.0\WebFont\Linearicons-Free.ttf" />
-    <Content Include="Assets\fonts\Linearicons-Free-v1.0.0\WebFont\Linearicons-Free.woff" />
-    <Content Include="Assets\fonts\Linearicons-Free-v1.0.0\WebFont\Linearicons-Free.woff2" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-Black.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-BlackItalic.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-Bold.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-BoldItalic.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-ExtraBold.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-ExtraBoldItalic.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-ExtraLight.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-ExtraLightItalic.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-Italic.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-Light.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-LightItalic.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-Medium.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-MediumItalic.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-Regular.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-SemiBold.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-SemiBoldItalic.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-Thin.ttf" />
-    <Content Include="Assets\fonts\montserrat\Montserrat-ThinItalic.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-Black.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-BlackItalic.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-Bold.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-BoldItalic.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-ExtraBold.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-ExtraBoldItalic.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-ExtraLight.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-ExtraLightItalic.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-Italic.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-Light.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-LightItalic.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-Medium.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-MediumItalic.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-Regular.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-SemiBold.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-SemiBoldItalic.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-Thin.ttf" />
-    <Content Include="Assets\fonts\poppins\Poppins-ThinItalic.ttf" />
-    <Content Include="Assets\vendor\bootstrap\css\bootstrap-grid.css.map" />
-    <Content Include="Assets\vendor\bootstrap\css\bootstrap-grid.min.css.map" />
-    <Content Include="Assets\vendor\bootstrap\css\bootstrap-reboot.css.map" />
-    <Content Include="Assets\vendor\bootstrap\css\bootstrap-reboot.min.css.map" />
-    <Content Include="Assets\vendor\bootstrap\css\bootstrap.css.map" />
-    <Content Include="Assets\vendor\bootstrap\css\bootstrap.min.css.map" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Images\DienThoais\Galaxy-S22-Black-600x600.jpg" />
     <Content Include="Images\DienThoais\Galaxy-S22-Plus-Black-600x600.jpg" />
@@ -482,9 +362,7 @@
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CSS\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
