--- a/Cart/Cart/Cart.csproj
+++ b/Cart/Cart/Cart.csproj
@@ -152,6 +152,7 @@
     <Content Include="bootstrap\js\bootstrap.bundle.min.js.map" />
     <Content Include="bootstrap\js\bootstrap.js.map" />
     <Content Include="bootstrap\js\bootstrap.min.js.map" />
+    <Content Include="WebDienThoai.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Images\DienThoais\Galaxy-S22-Black-600x600.jpg" />
     <Content Include="Images\DienThoais\Galaxy-S22-Plus-Black-600x600.jpg" />
@@ -283,6 +284,7 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
+    <Content Include="ThongTinChiTiet.aspx" />
     <Content Include="TongQuan.aspx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
@@ -352,6 +354,13 @@
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
     </Compile>
+    <Compile Include="ThongTinChiTiet.aspx.cs">
+      <DependentUpon>ThongTinChiTiet.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ThongTinChiTiet.aspx.designer.cs">
+      <DependentUpon>ThongTinChiTiet.aspx</DependentUpon>
+    </Compile>
     <Compile Include="TongQuan.aspx.cs">
       <DependentUpon>TongQuan.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -365,6 +374,13 @@
     </Compile>
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="WebDienThoai.aspx.cs">
+      <DependentUpon>WebDienThoai.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebDienThoai.aspx.designer.cs">
+      <DependentUpon>WebDienThoai.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup />
