insert data Tivi

--- a/Cart/Cart/Cart.csproj
+++ b/Cart/Cart/Cart.csproj
@@ -222,7 +222,7 @@
     <Content Include="Images\LapTops\Surface-Laptop-Studio-600x600.jpg" />
     <Content Include="Images\LapTops\Surface-Pro-8-Platinum-600x600.jpg" />
     <Content Include="Images\LapTops\thinkbook-14p-g2-ach-r5-.jpg" />
-    <Content Include="Images\TiVi\tv1.jpeg" />
+    <Content Include="Images\TiVi\tv1.jpg" />
     <Content Include="Images\TiVi\tv10.jpg" />
     <Content Include="Images\TiVi\tv11.jpg" />
     <Content Include="Images\TiVi\tv12.jpg" />
