--- a/Cart/Cart/Cart.csproj
+++ b/Cart/Cart/Cart.csproj
@@ -122,6 +122,7 @@
     <Content Include="bootstrap\js\bootstrap.js" />
     <Content Include="bootstrap\js\bootstrap.min.js" />
     <Content Include="bootstrap\script.js" />
+    <Content Include="chitietdt.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -152,15 +153,13 @@
     <Content Include="bootstrap\js\bootstrap.bundle.min.js.map" />
     <Content Include="bootstrap\js\bootstrap.js.map" />
     <Content Include="bootstrap\js\bootstrap.min.js.map" />
+    <Content Include="ThongTinChiTiet.aspx" />
     <Content Include="WebDienThoai.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
-    <Content Include="Images\DienThoais\Galaxy-S22-Black-600x600.jpg" />
-    <Content Include="Images\DienThoais\Galaxy-S22-Plus-Black-600x600.jpg" />
     <Content Include="Images\DienThoais\Galaxy-S22-Ultra-Burgundy-600x600.jpg" />
     <Content Include="Images\DienThoais\iphone-12-mini-mau-tim-3-600x600.jpg" />
     <Content Include="Images\DienThoais\iphone-12-pro-xam-new-600x600-2-600x600.jpg" />
     <Content Include="Images\DienThoais\iphone-12-xanh-la-new-2-600x600.jpg" />
-    <Content Include="Images\DienThoais\iphone-13-midnight-2-600x600.jpg" />
     <Content Include="Images\DienThoais\iphone-13-mini-128gb-xanh-la-090322-011146-600x600.jpg" />
     <Content Include="Images\DienThoais\iphone-13-mini-blue-2-600x600.jpg" />
     <Content Include="Images\DienThoais\iphone-13-pro-max-gold-1-600x600.jpg" />
@@ -173,11 +172,9 @@
     <Content Include="Images\DienThoais\iphone-xr-128gb-600x600.jpg" />
     <Content Include="Images\DienThoais\oppo-reno4-pro-trang-600x600.jpg" />
     <Content Include="Images\DienThoais\oppo-reno6-5g-black-600x600.jpg" />
-    <Content Include="Images\DienThoais\oppo-reno7-5g-xanh-thumb-600x600.jpg" />
     <Content Include="Images\DienThoais\realme-c21y-blue-600x600.jpg" />
     <Content Include="Images\DienThoais\samsung-galaxy-a52s-5g-mint-600x600.jpg" />
     <Content Include="Images\DienThoais\Samsung-Galaxy-S21-FE-tim-600x600.jpg" />
-    <Content Include="Images\DienThoais\samsung-galaxy-s21-plus-bac-600x600-600x600.jpg" />
     <Content Include="Images\DienThoais\samsung-galaxy-s21-tim-600x600.jpg" />
     <Content Include="Images\DienThoais\samsung-galaxy-s21-ultra-bac-600x600-1-600x600.jpg" />
     <Content Include="Images\DienThoais\samsung-galaxy-z-flip-3-cream-1-600x600.jpg" />
@@ -284,7 +281,6 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
-    <Content Include="ThongTinChiTiet.aspx" />
     <Content Include="TongQuan.aspx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
@@ -301,6 +297,12 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="chitietdt.aspx.cs">
+      <DependentUpon>chitietdt.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="chitietdt.aspx.designer.cs">
+      <DependentUpon>chitietdt.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
