--- a/Cart/Cart/Cart.csproj
+++ b/Cart/Cart/Cart.csproj
@@ -131,6 +131,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="CSS\Styles.css" />
     <Content Include="DanhSachLapTops.aspx" />
+    <Content Include="DanhSachDienThoai.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="DieuKhoanDichVu.aspx" />
     <Content Include="favicon.ico" />
@@ -162,6 +163,8 @@
     <Content Include="Images\Content\content3.jpg" />
     <Content Include="Images\Content\content4.jpg" />
     <Content Include="Images\Content\content.jpg" />
+    <Content Include="Images\Content\dessss-1200x90.png" />
+    <Content Include="Images\Content\dmxd-1200x90.png" />
     <Content Include="Images\LapTops\acer-nitro-5-gaming-an515-45-r6ev-r5-5600h.jpg" />
     <Content Include="Images\LapTops\acer-nitro-5-gaming-an515-57-54mv-i5-11400h.jpg" />
     <Content Include="Images\LapTops\apple-macbook-pro-14-m1-pro.jpg" />
@@ -329,6 +332,13 @@
     </Compile>
     <Compile Include="DanhSachLapTops.aspx.designer.cs">
       <DependentUpon>DanhSachLapTops.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="DanhSachDienThoai.aspx.cs">
+      <DependentUpon>DanhSachDienThoai.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="DanhSachDienThoai.aspx.designer.cs">
+      <DependentUpon>DanhSachDienThoai.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
