update form home

--- a/Cart/Cart/Cart.csproj
+++ b/Cart/Cart/Cart.csproj
@@ -165,6 +165,7 @@
     <Content Include="Images\Content\content.jpg" />
     <Content Include="Images\Content\dessss-1200x90.png" />
     <Content Include="Images\Content\dmxd-1200x90.png" />
+    <Content Include="Images\Content\Taglinedealsoc-1920x144-1.png" />
     <Content Include="Images\LapTops\acer-nitro-5-gaming-an515-45-r6ev-r5-5600h.jpg" />
     <Content Include="Images\LapTops\acer-nitro-5-gaming-an515-57-54mv-i5-11400h.jpg" />
     <Content Include="Images\LapTops\apple-macbook-pro-14-m1-pro.jpg" />
